fix: adds scroll padding to cube-select-grp to correct first item in list being cut off

--- a/lucuberate-client/src/layouts/SidePanel/CategoryAndCubeList/style.css
+++ b/lucuberate-client/src/layouts/SidePanel/CategoryAndCubeList/style.css
@@ -1,5 +1,6 @@
 .cube-select-group > ul {
   overflow: hidden;
+  scroll-padding-top: 54px;
 }
 .cube-select-group > ul:hover {
   overflow: auto;
